package com.universidad.notificador.modelo;

public enum EstadoNotificacion {
    PENDIENTE,
    ENVIADA,
    FALLIDA
}