package com.universidad.notificador.modelo;

public enum TipoNotificacion {
    PUBLICACION_CALIFICACIONES,
    RECORDATORIO_MATRICULA,
    AVISO_CANCELACION,
    CONFIRMACION_INSCRIPCION
}